--- a/css/madlibs.css
+++ b/css/madlibs.css
@@ -22,12 +22,11 @@ button {
 	margin-right: 5px;
 }
 
-.madLibContainer {
-	margin-right: 10px;
-}
 .madLibContainer, .madLibOutputContainer {
 	float: left;
 	border: 1px solid black;	
-	width: 500px;
-	height: 800px;
+	/*width: 500px;*/
+	margin: 5px;
+	min-height: 200px;
+	/*max-height: 800px;*/
 }
